--- a/style.css
+++ b/style.css
@@ -14,22 +14,42 @@ ul li {
   list-style: none;
 }
 
+.list-item{
+  padding: 5px
+}
+.inline {
+  display:inline-block;
+  width: 42%
+}
+
 label {
+  display: block;
   
+}
+form {
+  width: 80%;
+  margin-left: 10%
 }
 
 input {
-
+  width: 80%;
 }
 
 input:focus {
+  
+}
 
+button{ 
+  margin-left: 2%;
+  padding: 2%;
+  border-radius: 15px
 }
 
 button:hover {
-
+  background-color: #2ecc71;
+  color: white;
 }
 
 button:active {
-
+  background-color: #2ecc71;
 }
